--- a/client/src/widgets/Page/Page.module.scss
+++ b/client/src/widgets/Page/Page.module.scss
@@ -1,11 +1,4 @@
-.Page {
-  // height: calc(100vh - var(--header-height));
-  // overflow-y: auto;
-
-  // &::-webkit-scrollbar {
-  //   display: none;
-  // }
-}
+.Page {}
 
 .trigger {
   height: 20px;
