fix: streaming initial ui (Sidebar, ProfilePage)

--- a/client/src/entities/Comment/ui/CommentCard/CommentCard.module.scss
+++ b/client/src/entities/Comment/ui/CommentCard/CommentCard.module.scss
@@ -7,12 +7,17 @@
   }
 
   .content {
+    display: block;
     font-size: 14px;
-    display: inline-block;
+    width: calc(100% - 48px);
 
     .username {
       margin-right: 4px;
       font-weight: 700;
+    }
+
+    .text {
+      word-wrap: break-word;
     }
   }
 
