--- a/client/src/features/createPost/ui/CreatePostHeader/CreatePostHeader.module.scss
+++ b/client/src/features/createPost/ui/CreatePostHeader/CreatePostHeader.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 18px 0 18px 24px;
   background-color: var(--dark-color-300);
-  border-bottom: 1px solid var(--dark-color-100);
+  border: 1px solid var(--dark-color-100);
 
   .title {
     position: absolute;
@@ -14,4 +14,9 @@
   .icon {
     cursor: pointer
   }
+}
+
+.defaultHeader {
+  background-color: var(--dark-color-300);
+  border: 1px solid var(--dark-color-100);
 }
