--- a/client/src/shared/ui/Modal/Modal.module.scss
+++ b/client/src/shared/ui/Modal/Modal.module.scss
@@ -44,6 +44,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--dark-color-300);
   border-bottom: 1px solid var(--dark-color-100);
   gap: 48px;
 
