--- a/client/src/features/post/createPost/ui/CreatePost/CreatePost.module.scss
+++ b/client/src/features/post/createPost/ui/CreatePost/CreatePost.module.scss
@@ -33,38 +33,38 @@
 
 @keyframes visibleToLeft {
   from {
-    opacity: 0.2;
-    transform: scaleX(0.6) translate(75%);
+    opacity: 0;
+    transform: scaleX(0);
   } to {
     opacity: 1;
-    transform: scaleX(1) translateX(0%);
+    transform: scaleX(1);
   }
 }
 
 @keyframes visibleToRight {
   from {
-    opacity: 0.2;
-    transform: scaleX(0.6) translate(-75%);
+    opacity: 0;
+    transform: scaleX(0);
   } to {
     opacity: 1;
-    transform: scaleX(1) translateX(0%);
+    transform: scaleX(1);
   }
 }
 
 @keyframes fadeToLeft {
   from {
-    transform: scaleX(1) translate(0);
+    transform: scaleX(1) ;
   } to {
-    opacity: 0.2;
-    transform: scaleX(0.6) translateX(-75%);
+    opacity: 0;
+    transform: scaleX(0);
   }
 }
 
 @keyframes fadeToRight {
   from {
-    transform: scaleX(1) translate(0);
+    transform: scaleX(1) ;
   } to {
-    opacity: 0.2;
-    transform: scaleX(0.6) translateX(75%);
+    opacity: 0;
+    transform: scaleX(0);
   }
 }
