--- a/client/src/widgets/PostList/ui/PostListItem/PostListItem.module.scss
+++ b/client/src/widgets/PostList/ui/PostListItem/PostListItem.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   // flex-grow: 1;
   flex-basis: calc(25% - 3px);
+  width: calc(25% - 3px);
   aspect-ratio: 1 / 1;
 
   .postLink {
